# studentenwerk-menu-ced-checker

./: .gitignore  LICENSE  README.md  generate_page.py  main.py  pyproject.toml
.github/workflows/: daily-page.yml
ced_checker/: analyzer.py  api.py  config_loader.py  html_generator.py  models.py  output.py  report.py
config/: allergene_zusatzstoffe.xlsx  nahrungsmittel.xlsx  settings.json
